@@ -1,5 +1,6 @@
 0.18
  - Improve init() code.
+ - Remove check for process_css() method, it's in all Tags::HTML instances.
  - Update copyright years.
 
 0.17 2024-04-21T12:34:17+02:00
